<resources>
    <string name="app_name">网上商城</string>
    <string name="login_by_password">密码登录</string>
    <string name="login_by_verifycode">验证码登录</string>
    <string name="phone_number">手机号码:</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="login_password">登录密码:</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登&#160;&#160;&#160;录</string>
    <string name="input_new_password">输入新密码:</string>
    <string name="input_new_password_hint">请输入新密码</string>
    <string name="confirm_new_password">确认新密码:</string>
    <string name="input_new_password_again">请再次输入新密码</string>
    <string name="verifycode">&#160;&#160;&#160;&#160;验证码:</string>
    <string name="input_verifycode">请输入验证码</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="done">确&#160;&#160;&#160;定</string>
    <string name="register_message">如果你还没有注册，请先注册</string>
    <string name="username">用户名：</string>
    <string name="password">&#160;&#160;&#160;&#160;&#160;密码：</string>
    <string name="gender">性别：</string>
    <string name="email">邮箱：</string>
    <string name="register">注&#160;&#160;&#160;&#160;册</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>